# anime-game-daily-reward

./: Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs
